logo align fix

--- a/styles/src/style.less
+++ b/styles/src/style.less
@@ -98,7 +98,7 @@ main {
   .navbar-brand {
     padding: 4px 7px 7px 7px;
     height: 50px;
-    margin-left: 0;
+    margin-left: 0 !important;
     padding-left: 0;
 
     .logo {
